--- a/defiantlabs.net/themes/hugo-universal-theme/layouts/index.html
+++ b/defiantlabs.net/themes/hugo-universal-theme/layouts/index.html
@@ -20,7 +20,7 @@
 
         {{ partial "testimonials.html" . }}
 
-        {{ partial "see_more.html" . }}
+        {{ partial "projects.html" . }}
 
         {{ partial "recent_posts.html" . }}
 
