--- a/defiantlabs.net/themes/hugo-universal-theme/static/css/style.dark.css
+++ b/defiantlabs.net/themes/hugo-universal-theme/static/css/style.dark.css
@@ -6,6 +6,12 @@ body.dark-mode main * {
     color: #f5f5f5;
 }
 
+body, 
+body main * {
+    background: rgb(45, 45, 45);
+    color: #f5f5f5;
+}
+
 :root {
   --primary-accent: #7b1494;
   --navbar-border-top: #480e52;
@@ -3097,10 +3103,12 @@ fieldset[disabled] .btn-template-primary.active {
   background-color: transparent;
 }
 .navbar-default .navbar-text {
-  color: #777777;
+  font-family: Helvetica, sans-serif;
+  color: #f5f5f5;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #555555;
+  font-family: Helvetica, sans-serif;
+  color: #f5f5f5;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
