--- a/defiantlabs.net/themes/hugo-universal-theme/layouts/index.html
+++ b/defiantlabs.net/themes/hugo-universal-theme/layouts/index.html
@@ -26,6 +26,8 @@
 
         {{ partial "clients.html" . }}
 
+        {{ partial "platforms.html" . }}
+
         {{ partial "footer.html" . }}
 
     </div>
