--- a/defiantlabs.net/themes/hugo-universal-theme/layouts/partials/nav.html
+++ b/defiantlabs.net/themes/hugo-universal-theme/layouts/partials/nav.html
@@ -4,7 +4,7 @@
             <div class="navbar-header">
                 <a class="navbar-brand home" href="{{ "/" | relLangURL }}">
                     {{ if default false .Site.Params.disabled_logo }}
-                      <h4>{{ .Site.Params.logo_text }}</h4>
+                    <p style="float: left;"><img src="{{ .Site.Params.logo | relURL }}" alt="{{ .Title }} logo" class="hidden-xs hidden-sm" /></p><h4>{{ .Site.Params.logo_text }}</h4>
                     {{ else }}
                       <img src="{{ .Site.Params.logo | relURL }}" alt="{{ .Title }} logo" class="hidden-xs hidden-sm" />
                       <img src="{{ .Site.Params.logo_small | relURL }}" alt="{{ .Title }} logo" class="visible-xs visible-sm" />
