Testimonals and Minor Content Update

--- a/defiantlabs.net/themes/hugo-universal-theme/layouts/index.html
+++ b/defiantlabs.net/themes/hugo-universal-theme/layouts/index.html
@@ -14,7 +14,8 @@
 
         {{ partial "nav.html" . }}
 
-        {{ partial "carousel.html" . }}
+        {{ partial "carousel.html" . }} 
+       <!-- {{ partial "see_more.html" . }} --->
 
         {{ partial "features.html" . }}
 
