--- a/themes/orbitor-hugo/layouts/partials/testimonial.html
+++ b/themes/orbitor-hugo/layouts/partials/testimonial.html
@@ -23,7 +23,7 @@
             </div>
             <div class="info">
               <h6>{{ .name }}</h6>
-              <span>{{ .location }}</span>
+              <span>{{ .occupation }}</span>
             </div>
           </div>
         </div>
