--- a/themes/orbitor-hugo/layouts/_default/contact.html
+++ b/themes/orbitor-hugo/layouts/_default/contact.html
@@ -16,7 +16,7 @@
             <form id="contact-form" class="contact__form" method="post" action="{{.form_action}}">
               <div class="form-group">
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option selected disabled>I Need help in ...</option>
+                  <option selected disabled>Select from list ...</option>
                   {{ range .contact_topics }}
                   <option value="{{ . | urlize}}">{{ . }}</option>
                   {{ end }}
