--- a/themes/orbitor-hugo/layouts/_default/contact.html
+++ b/themes/orbitor-hugo/layouts/_default/contact.html
@@ -48,16 +48,12 @@
             <div class="short-info mt-5 mt-lg-0">
               <ul class="list-unstyled">
                 <li>
-                  <h5>Call Us</h5>
-                  {{ site.Params.mobile }}
+                  <h5>Twitter</h5>
+                  @{{ site.Params.twitter }}
                 </li>
                 <li>
-                  <h5>Email Us</h5>
+                  <h5>Email</h5>
                   {{ site.Params.email }}
-                </li>
-                <li>
-                  <h5>Location Map</h5>
-                  {{ site.Params.location }}
                 </li>
               </ul>
 
