--- a/themes/orbitor-hugo/layouts/partials/footer.html
+++ b/themes/orbitor-hugo/layouts/partials/footer.html
@@ -37,7 +37,8 @@
 			<div class="col-lg-3 col-md-6 col-sm-6">
 				<div class="widget widget-contact mb-5 mb-lg-0">
 					<h4 class="text-capitalize mb-4">Get in Touch</h4>
-					<h6><a href="tel:{{ site.Params.mobile }}"> <i class="ti-mobile mr-3"></i>{{ site.Params.mobile }}</a></h6>
+					<!-- <h6><a href="tel:{{ site.Params.mobile }}"> <i class="ti-mobile mr-3"></i>{{ site.Params.mobile }}</a></h6> -->
+					<h6><a href="https://twitter.com/{{ site.Params.twitter }}"> <i class="ti-twitter-alt mr-3"></i>{{ site.Params.twitter }}</a></h6>
 					<h6><a href="mailto:{{ site.Params.email }}"> <i class="ti-headphone-alt mr-3"></i>{{ site.Params.email }}</a></h6>
 					<ul class="list-inline footer-socials mt-5">
 						{{ range site.Params.social }}
